<resources>
    <string name="app_name">Layout Examples</string>
    <string name="click_me">CLICK ME</string>
    <string name="new_button_text">BELOW</string>
    <string name="to">To</string>
    <string name="message">Message</string>
    <string name="send">SEND</string>
    <string name="to_hint">Enter email address</string>

    <string name="to_label">To:</string>
    <string name="email_hint">Enter email address</string>
    <string name="subject_hint">Subject</string>
    <string name="message_hint">Message</string>
    <string name="send_button">Send</string>
</resources>
